<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity"
    android:gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext2"
            android:padding="24dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_build_24"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="TODO" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appname"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apppreview"
                android:textSize="18dp"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:drawableLeft="@drawable/baseline_person_24"
                android:background="@drawable/custom_edittext2"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:drawablePadding="8dp"/>
            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:hint="@string/password"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:inputType="textPassword"
                android:background="@drawable/custom_edittext2"
                android:padding="10dp"
                android:drawablePadding="8dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login_btn"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#83B4F9"
                android:textColor="@android:color/white"
                android:padding="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontregister"/>
        <TextView
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text=" 이곳을 눌러 보세요!"/>
    </LinearLayout>

</LinearLayout>